# DepthToNormal

./: README.md  depth_to_normal.py  depth_to_pointcloud.py  example.py  pointcloud_to_normal.py  spec-file.txt
python/: CMakeLists.txt  NormalEstimatorHough.cpp  NormalEstimatorHough.pyx  Normals.h  c_normEstHough.pxd  normEstHough.cxx  normEstHough.h  setup.py
